# pet

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.zcode/plans/: plan-sess_2197f8ca-0a6a-4ee4-bf74-032166682e85.md  plan-sess_714d1888-cbe6-4e50-b6e0-b283d69138cb.md  plan-sess_79cd414e-78de-4b57-ab08-112441edb68f.md
api_doc/: README.md
api_doc/activity-log/: README.md
api_doc/ai-chat/: README.md
api_doc/album/: README.md
api_doc/auth/: README.md
api_doc/briefing/: README.md
api_doc/calendar/: README.md
api_doc/common/: README.md
api_doc/diet/: README.md
api_doc/export/: README.md
api_doc/family/: README.md
api_doc/finance/: README.md
api_doc/guest/: README.md
api_doc/health/: README.md
api_doc/notification/: README.md
api_doc/pet/: README.md
api_doc/radar/: README.md
api_doc/upload/: README.md
api_doc/vault/: README.md
api_doc/walk/: README.md
crates/api/: Cargo.toml
crates/api/data/breeds/: cats.json  dogs.json
crates/api/src/: app_state.rs  config.rs  error.rs  main.rs  openapi.rs  pet.rs  routes.rs
crates/api/src/auth/: dto.rs  handler.rs  jwt.rs  middleware.rs  mod.rs  seed.rs
crates/api/src/pet/: dto.rs  handler.rs
crates/api/src/seed/: breeds.rs  mod.rs
crates/api/src/utils/: url.rs
crates/client_app/: Cargo.toml  Dioxus.toml
crates/client_app/assets/: main.css  tailwind.css
crates/client_app/src/: api.rs  app.rs  auth.rs  components.rs  main.rs  routes.rs  state.rs
crates/client_app/src/api/: client.rs  types.rs  url.rs
crates/client_app/src/auth/: session.rs  token.rs  validate.rs
crates/client_app/src/components/: app_layout.rs  pet_header.rs  status_bar.rs  tab_bar.rs
crates/client_app/src/routes/: ai_chat.rs  briefing.rs  login.rs  me.rs  register.rs  splash.rs
crates/db/: Cargo.toml
crates/db/src/: family.rs  lib.rs  pet.rs  user.rs
crates/domain/: Cargo.toml
crates/domain/src/: app.rs  family.rs  lib.rs  pet.rs  user.rs
data/breeds/: cats.json  dogs.json
degisn/: design-system.css  family-permissions-v1.html  family-permissions-v1.html.artifact.json  family-permissions.html  family-permissions.html.artifact.json  index.html  onboarding-step1.html  onboarding-step2.html  onboarding-step3.html  onboarding-welcome.html  pet-profile.html  pet-profile.html.artifact.json  profile-me.html  tab-ai-chat.html  tab-ai-chat.html.artifact.json  tab-album.html  tab-briefing.html  tab-briefing.html.artifact.json  tab-calendar.html  tab-health.html  tab-health.html.artifact.json  tool-diet.html  tool-export.html  tool-finance.html  tool-guest.html  tool-invite.html  tool-radar.html  tool-vault.html  walk-live.html  walk-summary.html  产品原型.md
docs/superpowers/plans/: 2026-07-15-db-crate-implementation.md  2026-07-16-api-auth-plan.md  2026-07-17-admin.md  2026-07-21-client-app-splash-auth.md
docs/superpowers/specs/: 2026-07-15-db-crate-design.md  2026-07-16-api-auth-design.md  2026-07-17-admin-design.md  2026-07-17-admin-scaffold-design.md  2026-07-21-client-app-splash-auth-design.md
scripts/: collect-cat-breeds.mjs  collect-dog-breeds.mjs  getCrateVersion.js  translate-breeds.mjs
