[workspace]
members = ['crates/api', 'crates/db', 'crates/domain']
resolver = '2'

[workspace.package]
edition = "2024"

[workspace.dependencies]
domain = { path = "crates/domain" }
db = { path = "crates/db" }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ['full'] }
uuid = { version = "1.23.5", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde"] }
thiserror = "2.0.18"
anyhow = "1.0.103"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
axum = "0.8.9"
toasty = { version = "0.8.0", features = ["sqlite"] }
async-trait = "0.1.88"
jsonwebtoken = { version = "10.4.0", features = ["aws_lc_rs"] }
argon2 = "0.5.3"
once_cell = "1.21.4"
regex = "1.13.1"
