[workspace]
members = [
    "crates/api",
    "crates/db",
    "crates/domain",
    "crates/client_app",
]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies.db]
path = "crates/db"

[workspace.dependencies.domain]
path = "crates/domain"

[workspace.dependencies]
anyhow = "1.0.103"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = "0.8.9"
dotenvy = "0.15.7"
once_cell = "1.21.4"
regex = "1.13.1"
serde_json = "1.0.150"
thiserror = "2.0.18"
tracing = "0.1.44"
utoipa-axum = "0.2.0"

[workspace.dependencies.chrono]
version = "0.4.45"
features = ["serde"]

[workspace.dependencies.jsonwebtoken]
version = "10.4.0"
features = ["rust_crypto"]

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.toasty]
version = "0.8.0"
features = ["sqlite"]

[workspace.dependencies.tokio]
version = "1.52.4"
features = ["full"]

[workspace.dependencies.tracing-subscriber]
version = "0.3.23"
features = ["env-filter"]

[workspace.dependencies.utoipa]
version = "5.5.0"
features = [
    "axum_extras",
    "uuid",
]

[workspace.dependencies.utoipa-scalar]
version = "0.3.0"
features = ["axum"]

[workspace.dependencies.uuid]
version = "1.24.0"
features = [
    "v4",
    "serde",
]
