[package]
name = "api"
version = "0.1.0"
edition.workspace = true

[dependencies]
domain = { workspace = true }
db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }