[package]
name = "api"
version = "0.1.0"
edition.workspace = true
default-run = "api"

[dependencies]
domain = { workspace = true }
db = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
once_cell = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
dotenvy = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-scalar = { workspace = true }
toasty = { workspace = true }
toasty-cli = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "seed_breeds"
path = "src/bin/seed_breeds.rs"